feat(alioss): 重构阿里云 OSS 文件上传功能,并添加新增菜品功能
-移除 AliOssProperties 类，改为使用 AliyunOSSProperties- 重构 AliOssUtil 类，使用环境变量获取凭证，支持 SDK V4 签名- 新增通用文件上传接口和菜品管理相关功能
- 更新 MyBatis 映射文件，支持菜品和菜品口味的插入
- 升级 aliyun-sdk-oss 版本到 3.17.4
- 添加 JAXB 相关依赖，以支持 SDK V4 签名

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,7 @@ sky:
     database: sky_take_out
     username: root
     password: 284100
+  alioss:
+    endpoint: https://oss-cn-beijing.aliyuncs.com
+    bucketName: hodaka-java-ai
+    region: cn-beijing
