feat(sky-server): 添加 Redis配置和店铺状态接口
- 在 application.yml 和 application-dev.yml 中添加 Redis 配置
- 新增 RedisConfiguration 类，配置 RedisTemplate
- 实现 ShopController 类，提供店铺状态设置和获取接口- 分离管理端和用户端的 Swagger 文档

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -10,3 +10,8 @@ sky:
     endpoint: https://oss-cn-beijing.aliyuncs.com
     bucketName: hodaka-java-ai
     region: cn-beijing
+  redis:
+    host: localhost
+    port: 6379
+    password: '284100'
+    database: 10
