feat(user): 实现用户端接口并添加微信登录功能
- 新增用户端相关接口和控制器- 实现微信登录逻辑和用户信息管理
- 添加用户端的菜品和套餐浏览功能
- 新增用户身份验证拦截器

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -15,3 +15,6 @@ sky:
     port: 6379
     password: '284100'
     database: 10
+  wechat:
+    appid: wxe7d582fabd06097f
+    secret: 0fd8d27c26836d82c45d919b8f15a445
