--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -41,7 +41,13 @@ sky:
     admin-ttl: 720000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+    user-secret-key: itheima
+    user-ttl: 720000000
+    user-token-name: authentication
   alioss:
     endpoint: ${sky.alioss.endpoint}
     bucketName: ${sky.alioss.bucketName}
     region: ${sky.alioss.region}
+  wechat:
+    appid: ${sky.wechat.appid}
+    secret: ${sky.wechat.secret}
